inject firebase dependency and auth feature
